# aoi-generator

./: .gitignore  README.md  pyproject.toml
masks/: rita_metadata.json  seun_metadata.json
src/: main.py
src/fabric_analyzer/: advanced_african_fabric_pipeline.py  base.py
src/fabric_mask_generator/: base.py
src/image_processing/: base.py
src/polygon_drawer/: base.py  tutorial.md
